@@ -1,5 +1,7 @@
 INSERT INTO `creature_template` VALUES ('90002', 'Paul', null, null, '1', '1', '0', '0', '0', '367', '0', '0', '0', '35', '35', '1', '0', '0', '3', '3', '0', '1', '0', '0', '0', '0', '1', '1.14286', '1', '0', '-1', '1', '1', '1', '1', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '');
 INSERT INTO `creature_template` VALUES ('70000', 'Mercenary', null, null, '1', '1', '0', '0', '0', '49', '49', '49', '49', '35', '35', '1', '0', '7', '3', '3', '0', '1', '0', '0', '0', '0', '1', '1.14286', '1', '0', '-1', '1', '1', '1', '1', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '');
+INSERT INTO `creature_template` VALUES ('70001', 'John Doe', 'Mercenary', null, '80', '80', '0', '0', '0', '49', '0', '0', '0', '35', '35', '1', '0', '7', '3', '3', '0', '1', '0', '0', '0', '0', '1', '1.14286', '1', '0', '-1', '1', '1', '1', '1', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '');
 
 INSERT INTO `script_binding` VALUES ('0', 'mercenary_npc_gossip', '90002', '0');
 INSERT INTO `script_binding` VALUES ('0', 'mercenary_bot', '70000', '0');
+INSERT INTO `script_binding` VALUES ('0', 'mercenary_world_gossip', '70001', '0');
