@@ -1,2 +1,3 @@
 INSERT INTO `creature_template` VALUES ('70000', '0', '0', '0', '0', '0', '49', '49', '49', '49', 'Mercenary', null, null, '0', '1', '1', '0', '35', '0', '1', '1.14286', '1', '0', '0', '2000', '0', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '7', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '', '0', '3', '1', '1', '1', '1', '1', '1', '0', '0', '1', '0', '0', 'mercenary_bot', '12340');
 INSERT INTO `creature_template` VALUES ('90002', '0', '0', '0', '0', '0', '367', '0', '0', '0', 'Mercenary', 'Mercenary Master', null, '0', '80', '80', '0', '35', '1', '1', '1.14286', '1', '0', '0', '0', '0', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '', '0', '3', '1', '1', '1', '1', '1', '1', '0', '0', '1', '0', '0', 'mercenary_npc_gossip', '12340');
+INSERT INTO `creature_template` VALUES ('70001', '0', '0', '0', '0', '0', '49', '0', '0', '0', 'John Doe', 'Mercenary', null, '0', '80', '80', '0', '35', '0', '1', '1.14286', '1', '0', '0', '0', '0', '1', '1', '0', '0', '0', '0', '0', '0', '0', '0', '0', '7', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '0', '', '0', '3', '1', '1', '1', '1', '1', '1', '0', '0', '1', '0', '0', 'mercenary_world_gossip', '12340');
